--- a/app/assets/stylesheets/mixins/_long-text-style.sass
+++ b/app/assets/stylesheets/mixins/_long-text-style.sass
@@ -122,6 +122,7 @@
     border: none
   img
     max-width: 100%
+    max-height: 35rem
     height: auto
     display: block
     +margin(horizontal, auto)
