--- a/app/assets/stylesheets/blocks/shared/_pagination.sass
+++ b/app/assets/stylesheets/blocks/shared/_pagination.sass
@@ -1,4 +1,4 @@
-.pagination
+.o-pagination
   +position(relative, 1)
   +media-breakpoint-up(md)
     margin-bottom: 1rem
@@ -14,7 +14,7 @@
       margin-top: .5rem
       margin-bottom: 0
 
-.pagination__items
+.o-pagination__items
   display: flex
   flex-wrap: wrap
   justify-content: center
@@ -22,13 +22,13 @@
   overflow-x: auto
   -webkit-overflow-scrolling: touch
 
-.pagination__item
+.o-pagination__item
   +padding(horizontal, .125rem)
   &.is-disabled
     opacity: .4
     pointer-events: none
 
-.pagination__item-link
+.o-pagination__item-link
   +size(2.5rem)
   border-radius: 50%
   outline: none
@@ -42,6 +42,6 @@
   &.is-active
     background-color: $main
     color: $reversal-text
-  .pagination__item.is-active &
+  .o-pagination__item.is-active &
     background-color: $main
     color: $reversal-text
