--- a/app/assets/stylesheets/variables/_colors.sass
+++ b/app/assets/stylesheets/variables/_colors.sass
@@ -15,7 +15,7 @@ $main-text: #3c3282
 $info-text: #246946
 
 $side: $main
-$side-border: #5b3eb9
+$side-border: #3e2884
 $side-tint: #4e6165
 $side-shade: #3a228a
 $side-active: $accent
