--- a/app/views/articles/index.html.slim
+++ b/app/views/articles/index.html.slim
@@ -1,5 +1,5 @@
 - title 'ブログ記事一覧'
-- add_breadcrumb "Home", root_path
+- add_breadcrumb 'Home', root_path
 - add_breadcrumb title, ''
 
 section.o-static-page
@@ -23,27 +23,3 @@ section.o-static-page
 
         .o-static-page-body__row
           //= paginate @articles
-          nav.o-pagination
-            ul.o-pagination__items
-              li.o-pagination__item.is-prev
-                a.o-pagination__item-link.is-prev href="" rel="prev"
-                  i.fbc-icon-angle-double-left
-              li.o-pagination__item.is-start
-                a.o-pagination__item-link.is-start href="/pages?page=5"
-                  i.fbc-icon-angle-left
-              li.o-pagination__item
-                a.o-pagination__item-link href=""  1
-              li.o-pagination__item
-                a.o-pagination__item-link href=""  2
-              li.o-pagination__item
-                a.o-pagination__item-link.is-active href=""  3
-              li.o-pagination__item
-                a.o-pagination__item-link href=""  4
-              li.o-pagination__item
-                a.o-pagination__item-link href=""  5
-              li.o-pagination__item.is-next
-                a.o-pagination__item-link.is-next href=""
-                  i.fbc-icon-angle-right
-              li.o-pagination__item.is-last
-                a.o-pagination__item-link.is-last href=""
-                  i.fbc-icon-angle-double-right
