--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -53,7 +53,7 @@ header.page-header
           - if current_user.student?
             #js-niconico_calendar(data-user-id="#{current_user.id}")
           - if current_user.mentor?
-            = render 'users/sad_emotion_report', users: User.students_and_trainees
+            = render 'users/sad_emotion_report', depressed_reports: @depressed_reports
           - if current_user.mentor?
             = render 'users/inactive_users', users: @inactive_students
           - if current_user.role == :student
